--- a/prob2/Makefile
+++ b/prob2/Makefile
@@ -1,14 +1,14 @@
 CC = g++
-CFLAGS = -Wall -pedantic -std=c++11 -I.
+CXXFLAGS = -Wall -pedantic -std=c++11 -I.
 DEPS = utils.h
 OBJ = prob2.o utils.o
 
 
 %.o: %.cpp $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) -c -o $@ $< $(CXXFLAGS)
 
 prob2: $(OBJ)
-	g++ -o $@ $^ $(CFLAGS)
+	g++ -o $@ $^ $(CXXFLAGS)
 
 .PHONY: clean
 
